--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,7 +41,7 @@ search
 
 .search {
 	display: flex;
-	height: 50px;
+	height: 40px;
 	flex: 1;
 	margin-right: 30px;
 	border-radius: 10px;
@@ -64,9 +64,13 @@ search
 	color: #333333;
 }
 
+/*==========================
+search-icon
+==========================*/
+
 .search-icon {
 	display: flex;
-	height: 45px;
+	height: 35px;
 	width: 70px;
 	justify-content: center;
 	align-items: center;
@@ -74,8 +78,8 @@ search
 
 .search-icon div {
 	position: relative;
-	width: 20px;
-	height: 20px;
+	width: 15px;
+	height: 15px;
 	border-radius: 50%;
 	border: 3px solid #AFAFAF;
 	transform: rotateZ(-135deg);
@@ -84,9 +88,9 @@ search
 .search-icon div::after {
 	position: absolute;
 	content: '';
-	left: -16px;
-	top: 9px;
-	width: 14px;
+	left: -13px;
+	top: 6px;
+	width: 12px;
 	height: 3px;
 	background: #AFAFAF;
 	border-radius: 50px;
