--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -8,6 +8,7 @@
 	flex-direction: column;
 	background: #F6F6F6;
 	max-width: 1500px;
+	min-height: calc(100vh - var(--nav-height));
 }
 
 .search_result_count {
@@ -43,12 +44,9 @@ items
 	transition: .3s;
 }
 
-.item-no-results {
-	padding: 50px;
-	font-size: 24px;
-	font-weight: bold;
-	text-align: center;
-	line-height: 2;
+.message-no-results {
+	font-size: 16px;
+	font-weight: 500;
 }
 
 /*==========================
@@ -314,7 +312,7 @@ btn-expand
 	transition: .2s;
 }
 
-.expand-category:checked ~ .btn-expand {
+.expand-category:checked ~ .filter-category-label .btn-expand {
 	transform: rotateZ(180deg);
 }
 
