add user-profile and refactor js

--- a/public/css/lib/btn.css
+++ b/public/css/lib/btn.css
@@ -46,6 +46,16 @@
 	border-color: #009AFF;
 }
 
+.btn-change {
+	color: #107F84;
+	font-weight: 500;
+	cursor: pointer;
+}
+
+.btn-change:hover {
+	text-decoration: underline;
+}
+
 /*==========================
 btn-back
 ==========================*/
