--- a/public/css/user-profile.css
+++ b/public/css/user-profile.css
@@ -1,4 +1,6 @@
 @import "lib/btn.css";
+@import "lib/input.css";
+@import "lib/popup.css";
 
 .center {
 	background: #ffffff;
@@ -41,5 +43,29 @@ user-info
 }
 
 .user-info-value {
+	display: flex;
+	white-space: pre;
 	color: #797979;
+}
+
+.user-info-change {
+	display: flex;
+	margin-top: 5px;
+}
+
+label {
+	flex: 1;
+	display: flex;
+}
+
+.input {
+	flex: 1;
+}
+
+.btn-save {
+	margin: 5px 0 0;
+}
+
+.gone {
+	display: none;
 }
