--- a/public/css/item.css
+++ b/public/css/item.css
@@ -17,6 +17,7 @@ main {
 	flex-direction: column;
 	padding: 0 50px;
 	max-width: 1300px;
+	width: 100%;
 }
 
 /*==========================
@@ -69,6 +70,7 @@ item-main
 
 .item-main {
 	display: flex;
+	width: 100%;
 }
 
 /*==========================
@@ -138,7 +140,10 @@ item-main-container
 .item-main-container {
 	flex: 1 0 ;
 	flex-direction: column;
-	margin-bottom: 70px
+	margin-bottom: 70px;
+	margin-right: 20px;
+	max-width: calc(100% - 400px);
+	width: 100%;
 }
 
 /*==========================
@@ -179,7 +184,7 @@ item-main-buy
 
 .item-buy {
 	display: flex;
-	width: 300px;
+	max-width: 100%;
 	flex-direction: column;
 	padding: 20px;
 }
@@ -343,7 +348,7 @@ item-reviews
 	flex-direction: column;
 	justify-content: center;
 	padding: 20px;
-	width: 200px;
+	max-width: 100%;
 }
 
 .item-review-name {
@@ -401,7 +406,9 @@ similar-item
 
 
 .slider-wrapper {
+	width: 100%;
 	overflow: hidden;
+	scroll-behavior: smooth;
 }
 
 .similar-item-cards-arrow {
@@ -411,7 +418,7 @@ similar-item
 }
 .similar-item-card {
 	display: flex;
-	flex: 1 0 48%;
+	flex: 1 0 calc(50% - 20px);
 	height: 150px;
 	margin: 0 10px 0 10px;
 
