add-to-favorites.js listens clicks and gets id

--- a/public/css/item.css
+++ b/public/css/item.css
@@ -37,7 +37,7 @@ item-header
 	font-weight: 700;
 }
 
-.add-to-favorites {
+.btn-add-to-favorites {
 	display: flex;
 	margin-left: 15px;
 	justify-content: end;
@@ -49,9 +49,10 @@ item-header
 	padding-left: 10px;
 	text-decoration: underline;
 	font-weight: 600;
+	user-select: none;
 }
 
-.add-to-favorites-icon {
+.add-to-favorites {
 	width: 30px;
 	height: 25px;
 
@@ -60,7 +61,7 @@ item-header
 	stroke: #222222;
 }
 
-.add-to-favorites:hover .add-to-favorites-icon {
+.btn-add-to-favorites:hover .add-to-favorites {
 	fill: red;
 	stroke: none;
 }
