--- a/public/css/404.css
+++ b/public/css/404.css
@@ -1,7 +1,7 @@
 .container {
 	position: relative;
 	flex: 1;
-	width: 100%;
+	width: 100vh;
 	height: calc(100vh - var(--nav-height));
 	display: flex;
 	flex-direction: column;
