--- a/public/css/add-item.css
+++ b/public/css/add-item.css
@@ -4,11 +4,13 @@
 
 .form-container {
 	flex: 1;
+	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: flex-start;
 	padding: 30px 50px;
 	max-width: 1300px;
+	min-height: calc(100vh - var(--nav-height));
 }
 
 .form-add {
