change colors for main, catalog and detailed-item

--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -2,12 +2,13 @@
 @import "lib/card.css";
 @import "lib/input.css";
 @import "lib/popup.css";
+@import "lib/add-to-favorites.css";
 
 .container {
 	flex: 1;
 	display: flex;
 	flex-direction: column;
-	background: #F6F6F6;
+	background: var(--color-secondary);
 	max-width: 1500px;
 	min-height: calc(100vh - var(--nav-height));
 	padding: 0 50px;
@@ -32,7 +33,6 @@ items
 	flex: 1;
 	min-height: 150px;
 	margin: 0 5px 30px;
-	background: #FFFFFF;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 	border-radius: 10px;
 	text-decoration: none;
@@ -81,6 +81,7 @@ item-image
 	height: 130px;
 	width: 130px;
 	margin: 10px;
+	border-radius: 10px;
 }
 
 /*==========================
@@ -112,7 +113,7 @@ item-other-header
 }
 
 .item-short-description {
-	color: #7D7D7D;
+	color: var(--color-font-secondary);
 }
 
 /*==========================
@@ -144,48 +145,6 @@ item-other-footer
 }
 
 /*==========================
-add-to-favorites
-==========================*/
-
-.add-to-favorites {
-	width: 30px;
-	height: 25px;
-	min-width: 30px;
-	fill: none;
-	stroke: #222222;
-	cursor: pointer;
-}
-
-.add-to-favorites:hover {
-	fill: red;
-	stroke: none;
-}
-
-.favoriteActive {
-	fill: red;
-	stroke: none;
-	animation: like .3s forwards;
-	transform-origin: center;
-}
-
-.removedFromFavorites {
-	fill: none !important;
-	stroke: #222222 !important;
-}
-
-@keyframes like {
-	0% {
-		transform: scale(1);
-	}
-	50% {
-		transform: scale(1.2);
-	}
-	100% {
-		transform: scale(1);
-	}
-}
-
-/*==========================
 rating
 ==========================*/
 
@@ -196,7 +155,7 @@ rating
 }
 
 .star-icon {
-	fill: #FF791E;
+	fill: var(--color-accent);
 	width: 25px;
 	height: 25px
 }
@@ -204,17 +163,15 @@ rating
 .rating-value {
 	margin: 0 10px;
 	font-weight: bold;
-	color: #333333;
 }
 
 .review-count {
-	color: #7D7D7D;
+	color: var(--color-font-secondary);
 }
 
 .price {
 	font-size: 18px;
 	font-weight: bold;
-	color: #333333;
 }
 
 /*==========================
@@ -228,7 +185,6 @@ admin-btn-container
 .admin-btn-container .btn {
 	margin: 0 10px;
 }
-
 
 /*==========================
 filters main
@@ -246,7 +202,6 @@ filters main
 
 .filters {
 	width: 270px;
-	background: #FFFFFF;
 	border-radius: 10px;
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 	padding: 15px;
@@ -285,7 +240,7 @@ filters price category
 	flex: 1;
 	padding: 0 6px;
 	border-radius: 10px;
-	border: 2px solid #D9D9D9;
+	border: 2px solid var(--color-placeholder);
 }
 
 .range-dash {
@@ -297,7 +252,7 @@ filters price category
 
 .price-label {
 	font-size: 11px;
-	color: #aaaaaa;
+	color: var(--color-icon);
 }
 
 .price-input {
@@ -377,7 +332,7 @@ btn-expand
 
 .spec-filter-section {
 	padding: 5px 0;
-	border-bottom: 1px solid #ebebeb;
+	border-bottom: 1px solid var(--color-separator);
 }
 
 .spec-filter-section:first-child {
@@ -413,7 +368,7 @@ filters tag category
 .tag label {
 	display: block;
 	position: relative;
-	border: 2px solid #D9D9D9;
+	border: 2px solid var(--color-icon);
 	border-radius: 1in;
 	padding: 5px;
 }
@@ -429,9 +384,9 @@ filters tag category
 
 .tag input:checked ~ label {
 	font-weight: 500;
-	color: #ffffff;
-	background: #444444;
-	border-color: #444444;
+	color: var(--color-main);
+	background: var(--color-font);
+	border-color: var(--color-font);
 }
 
 /*==========================
