--- a/public/css/lib/btn.css
+++ b/public/css/lib/btn.css
@@ -4,8 +4,8 @@
 	text-align: center;
 	border-radius: 10px;
 	padding: 0 5px;
-	border: 2px solid #D9D9D9;
-	background: #fff;
+	border: 2px solid var(--color-icon);
+	background: var(--color-main);
 	font-weight: 500;
 	cursor: pointer;
 	user-select: none;
@@ -21,8 +21,8 @@
 }
 
 .btn-normal:hover {
-	background: #F17F42;
-	border-color: #F17F42;
+	background: var(--color-accent);
+	border-color: var(--color-accent);
 	font-weight: 500;
 }
 
@@ -81,7 +81,7 @@ btn-back
 }
 
 .btn-back:hover {
-	background: #f7f7f7;
+	background: var(--color-secondary);
 }
 
 .btn-back::before, .btn-back::after {
@@ -91,7 +91,7 @@ btn-back
 	width: 12px;
 	height: 2px;
 	border-radius: 1in;
-	background: #333333;
+	background: var(--color-font);
 }
 
 .btn-back::before {
