--- a/public/css/lib/card.css
+++ b/public/css/lib/card.css
@@ -1,5 +1,5 @@
 .card {
-	background: #FFFFFF;
+	background: var(--color-main);
 	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 	border-radius: 10px;
 	transition: .3s;
@@ -14,5 +14,5 @@
 .card-outline {
 	border-radius: 10px;
 	box-shadow: 0 4px 10px 2px #0000001A;
-	border: 1px solid #DDDDDD;
+	border: 1px solid var(--color-icon);
 }
