--- a/public/css/lib/input.css
+++ b/public/css/lib/input.css
@@ -20,12 +20,12 @@
 	padding: 0 10px;
 	margin: 5px 10px 5px 0;
 	border-radius: 10px;
-	border: 2px solid #D9D9D9;
-	background: #ffffff;
+	border: 2px solid var(--color-icon);
+	background: var(--color-main);
 	outline: none;
 	font-size: 15px;
 	font-family: 'Montserrat', sans-serif;
-	color: #333333;
+	color: var(--color-font);
 }
 
 textarea {
@@ -33,7 +33,7 @@ textarea {
 }
 
 input::placeholder {
-	color: #BBBBBB;
+	color: var(--color-placeholder);
 }
 
 input::-webkit-calendar-picker-indicator {
