--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,10 +5,11 @@
 body {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 15px;
-	color: #333333;
+	color: var(--color-font);
 	--nav-height: 70px;
 	max-width: 100%;
 	overflow-x: hidden;
+	background-color: var(--color-main);
 }
 
 /*==========================
@@ -22,13 +23,13 @@ nav {
 	height: var(--nav-height);
 	display: flex;
 	align-items: center;
-	background: #FFFFFF;
+	background-color: var(--color-main);
 	padding: 0 50px;
 	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .logo {
-	fill: #F17F42;
+	fill: var(--color-accent);
 	min-width: 99px;
 	width: 99px;
 	height: 50px;
@@ -45,11 +46,11 @@ search
 	flex: 1;
 	margin-right: 30px;
 	border-radius: 10px;
-	background: #F2F2F2;
+	background: var(--color-secondary);
 }
 
 .search-field::placeholder {
-	color: #BBBBBB;
+	color: var(--color-placeholder);
 }
 
 .search-field {
@@ -61,7 +62,7 @@ search
 	outline: none;
 	font-size: 15px;
 	font-family: 'Montserrat', sans-serif;
-	color: #333333;
+	color: var(--color-font);
 }
 
 /*==========================
@@ -81,7 +82,7 @@ search-icon
 	width: 15px;
 	height: 15px;
 	border-radius: 50%;
-	border: 3px solid #AFAFAF;
+	border: 3px solid var(--color-icon);
 	transform: rotateZ(-135deg);
 }
 
@@ -92,7 +93,7 @@ search-icon
 	top: 6px;
 	width: 12px;
 	height: 3px;
-	background: #AFAFAF;
+	background: var(--color-icon);
 	border-radius: 50px;
 }
 
@@ -113,12 +114,12 @@ nav-bar
 	position: relative;
 	line-height: var(--nav-height);
 	padding: 0 20px;
-	box-shadow: inset 0 0 #F17F42;
+	box-shadow: inset 0 0 var(--color-accent);
 	transition: .1s;
 }
 
 .nav-item:hover, .nav-item-active {
-	box-shadow: inset 0 -4px #F17F42;
+	box-shadow: inset 0 -4px var(--color-accent);
 }
 
 /*==========================
@@ -146,7 +147,7 @@ menu
 	margin-top: 8px;
 	padding: 10px 0;
 	border-radius: 12px;
-	background: #ffffff;
+	background: var(--color-main);
 	box-shadow: 0 4px 10px 5px #00000026;
 }
 
@@ -160,7 +161,7 @@ menu
 }
 
 .menu-item:hover {
-	background: #f7f7f7;
+	background: var(--color-secondary);
 }
 
 /*==========================
@@ -175,7 +176,7 @@ main {
 	min-height: calc(100vh - var(--nav-height));
 	top: var(--nav-height);
 	z-index: -1;
-	background: #f6f6f6;
+	background: var(--color-secondary);
 }
 
 .center {
@@ -191,7 +192,7 @@ footer
 	display: flex;
 	height: 70px;
 	width: 100%;
-	background: #333;
+	background: var(--color-footer);
 	color: white;
 	align-items: center;
 	justify-content: center;
