--- a/public/css/lib/input.css
+++ b/public/css/lib/input.css
@@ -28,6 +28,11 @@
 	color: var(--color-font);
 }
 
+input:-webkit-autofill {
+	-webkit-box-shadow:0 0 0 50px var(--color-main) inset;
+	-webkit-text-fill-color: var(--color-font);
+}
+
 textarea {
 	line-height: 15px;
 }
