--- a/public/css/order.css
+++ b/public/css/order.css
@@ -4,10 +4,11 @@
 body {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 15px;
-	color: #333333;
+	color: var(--color-font);
 	--nav-height: 70px;
 	max-width: 100%;
 	overflow-x: hidden;
+	background-color: var(--color-main);
 }
 
 /*==========================
@@ -15,20 +16,23 @@ nav
 ==========================*/
 
 nav {
+	box-sizing: border-box;
 	position: fixed;
 	width: 100%;
 	height: var(--nav-height);
 	display: flex;
-	background: #FFFFFF;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 	align-items: center;
+	background-color: var(--color-main);
+	padding: 0 50px;
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .logo {
-	fill: #F17F42;
+	fill: var(--color-accent);
+	min-width: 99px;
 	width: 99px;
 	height: 50px;
-	margin: 0 50px;
+	margin-right: 50px;
 }
 
 .order-info-message {
@@ -38,9 +42,10 @@ nav {
 main {
 	position: absolute;
 	display: flex;
+	flex-direction: column;
 	width: 100vw;
 	min-height: calc(100vh - var(--nav-height));
 	top: var(--nav-height);
 	z-index: -1;
-	justify-content: center;
+	background: var(--color-main);
 }
