--- a/public/css/lib/btn.css
+++ b/public/css/lib/btn.css
@@ -4,7 +4,7 @@
 	text-align: center;
 	border-radius: 10px;
 	padding: 0 5px;
-	border: 2px solid var(--color-icon);
+	border: 2px solid var(--color-outline);
 	background: var(--color-main);
 	font-weight: 500;
 	cursor: pointer;
