--- a/public/css/lib/input.css
+++ b/public/css/lib/input.css
@@ -20,12 +20,17 @@
 	padding: 0 10px;
 	margin: 5px 10px 5px 0;
 	border-radius: 10px;
-	border: 2px solid var(--color-icon);
+	border: 2px solid var(--color-outline);
 	background: var(--color-main);
 	outline: none;
 	font-size: 15px;
 	font-family: 'Montserrat', sans-serif;
 	color: var(--color-font);
+}
+
+textarea {
+	line-height: 15px;
+	padding: 10px;
 }
 
 input:-webkit-autofill {
