--- a/public/css/orders.css
+++ b/public/css/orders.css
@@ -22,12 +22,12 @@ search
 	line-height: 40px;
 	flex: 1;
 	border-radius: 10px;
-	background: #ffffff;
+	background: var(--color-main);
 	border: 2px solid #D9D9D9;
 }
 
 .search-field::placeholder {
-	color: #BBBBBB;
+	color: var(--color-placeholder);
 }
 
 .search-field {
@@ -40,7 +40,7 @@ search
 	outline: none;
 	font-size: 15px;
 	font-family: 'Montserrat', sans-serif;
-	color: #333333;
+	color: var(--color-font);
 }
 
 /*==========================
