--- a/public/css/appearance/dark-theme.css
+++ b/public/css/appearance/dark-theme.css
@@ -7,7 +7,7 @@
 	--color-accent: #F17F42;
 	--color-icon: #afafaf;
 	--color-font: #ffffff;
-	--color-font-secondary: #7D7D7D;
+	--color-font-secondary: #9D9D9D;
 	--color-blocked: #888888;
 	--color-placeholder: #bbbbbb;
 	--color-outline: #777777;
@@ -15,5 +15,5 @@
 
 	--color-like: #ff0c0c;
 
-	--color-change: #12979d;
+	--color-change: #14abb2;
 }
