--- a/public/css/make-order.css
+++ b/public/css/make-order.css
@@ -25,7 +25,7 @@ order-items
 	margin: 0 20px 20px 0;
 	border-radius: 10px;
 	box-shadow: 0 4px 10px 2px #0000001A;
-	border: 1px solid #DDDDDD;
+	border: 1px solid var(--color-outline);
 }
 
 .item-image {
