--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,7 @@ nav {
 	align-items: center;
 	background-color: var(--color-main);
 	padding: 0 50px;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 2px 10px var(--color-shadow);
 }
 
 .logo {
@@ -148,7 +148,7 @@ menu
 	padding: 10px 0;
 	border-radius: 12px;
 	background: var(--color-main);
-	box-shadow: 0 4px 10px 5px #00000026;
+	box-shadow: 0 4px 10px 5px var(--color-shadow);
 }
 
 .menu-item {
