Добавление сортировки товаров

--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -50,6 +50,35 @@ items
 	font-weight: 500;
 }
 
+.item-sorting-box {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	height: 50px;
+	margin: 10px;
+}
+
+.item-sorting-box-title {
+	padding: 10px;
+}
+
+.item-sorting-button {
+	display: flex;
+	margin: 5px;
+	padding: 10px;
+	border-radius: 15px;
+	border: 1px solid #333;
+	background: #fff;
+	line-height: 1;
+	cursor: pointer;
+}
+
+.item-sorting-button:hover {
+	background: #F17F42;
+	border-color: #F17F42;
+	color: #ffffff;
+}
+
 /*==========================
 item-image
 ==========================*/
