Фикс большой высоты строки при уменьшении ширины экрана, добавление слова Корзина в шаблон, подсветка элемента Корзина, всплывающая подсказка на кнопке смены темы

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -115,10 +115,12 @@ nav-bar
 }
 
 .nav-item {
+	display: flex;
+	align-items: center;
 	position: relative;
-	line-height: var(--nav-height);
+	height: var(--nav-height);
 	padding: 0 20px;
-	box-shadow: inset 0 0 var(--color-accent);
+	border-bottom: inset 0 0 var(--color-accent);
 	transition: .1s;
 }
 
