detailed item add-to-favorites fix and main-item cursor default

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -122,6 +122,7 @@ nav-bar
 	padding: 0 20px;
 	border-bottom: inset 0 0 var(--color-accent);
 	text-align: center;
+	cursor: default;
 	transition: .1s;
 }
 
