--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
 * {
-	transition: background-color .5s, box-shadow .5s;
+	transition: background-color .5s, box-shadow .5s, fill .1s;
 }
 
 body {
@@ -182,8 +182,8 @@ btn-theme
 .btn-theme {
 	flex: 0;
 	min-width: 30px;
-	width: 30px;
-	height: 30px;
+	width: 26px;
+	height: 26px;
 	margin-left: 30px;
 	cursor: pointer;
 }
@@ -237,7 +237,8 @@ footer
 }
 
 .cart {
-	margin: auto 6px;
+	margin-right: 10px;
 	width: 26px;
 	height: 26px;
+	fill: var(--color-font);
 }
