--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,8 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 
 * {
-	transition: background-color .5s, box-shadow .5s, fill .1s,
-	border-bottom-color .5s, border-top-color .5s;
+	transition: background-color .5s, fill .1s, box-shadow .5s,
+	border-top-color .5s, border-right-color .5s, border-bottom-color .5s, border-left-color .5s;
 }
 
 body {
