--- a/public/css/lib/input.css
+++ b/public/css/lib/input.css
@@ -38,14 +38,15 @@ input:-webkit-autofill {
 	-webkit-text-fill-color: var(--color-font);
 }
 
-textarea {
-	line-height: 15px;
-}
-
-input::placeholder {
+input::placeholder, textarea::placeholder {
 	color: var(--color-placeholder);
 }
 
 input::-webkit-calendar-picker-indicator {
 	opacity: 0;
+}
+
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
 }
