--- a/public/css/main.css
+++ b/public/css/main.css
@@ -103,7 +103,7 @@ search-icon
 }
 
 .sign-in {
-	margin: 10px 10px 0 !important;
+	margin: 0 10px !important;
 }
 
 /*==========================
@@ -185,7 +185,7 @@ btn-theme
 	min-width: 30px;
 	width: 26px;
 	height: 26px;
-	margin-left: 30px;
+	margin-left: 25px;
 	cursor: pointer;
 }
 
