--- a/public/css/users-list.css
+++ b/public/css/users-list.css
@@ -40,9 +40,6 @@
 
 
 
-.btn-normal{
-	margin: 0;
-}
 
 .search-field::placeholder {
 	color: #BBBBBB;
@@ -91,7 +88,19 @@
 	white-space: nowrap;
 }
 
-label{
+.user-info label{
 	font-weight: bold;
+}
+
+
+.btn-normal{
+	margin: 0;
+	width: 40px;
+	height: 30px;
+}
+
+.pencil{
+	height: 100%;
+	width: 100%;
 }
 
