--- a/public/css/user-profile.css
+++ b/public/css/user-profile.css
@@ -53,6 +53,17 @@ user-info
 	margin-top: 5px;
 }
 
+.btn-change-role {
+	color: var(--color-change);
+	font-weight: 500;
+	cursor: pointer;
+	user-select: none;
+}
+
+.btn-change-role:hover {
+	text-decoration: underline;
+}
+
 label {
 	flex: 1;
 	display: flex;
