--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,6 +17,7 @@ body {
 	background-color: var(--color-main);
 }
 
+
 /*==========================
 nav
 ==========================*/
@@ -39,6 +40,18 @@ nav {
 	width: 99px;
 	height: 50px;
 	margin-right: 50px;
+}
+
+@media screen and (max-width: 1150px)  {
+	nav {
+		padding: 0 10px;
+	}
+
+	.logo {
+		min-width: 60px;
+		width: 60px;
+		margin-right: 20px;
+	}
 }
 
 /*==========================
@@ -70,6 +83,20 @@ search
 	color: var(--color-font);
 }
 
+@media screen and (max-width: 1150px)  {
+	.search {
+		margin-right: 10px;
+		padding: 0 10px;
+		justify-content: space-between;
+	}
+	.search-field {
+		font-size: 12px;
+		padding-right: 0;
+		padding-left: 5px;
+		max-width: 100px;
+	}
+}
+
 /*==========================
 search-icon
 ==========================*/
@@ -80,6 +107,12 @@ search-icon
 	width: 70px;
 	justify-content: center;
 	align-items: center;
+}
+@media screen and (max-width: 1150px)  {
+	.search-icon {
+		height: 35px;
+		width: 35px;
+	}
 }
 
 .search-icon div {
@@ -129,6 +162,22 @@ nav-bar
 
 .nav-item:hover, .nav-item-active {
 	box-shadow: inset 0 -4px var(--color-accent);
+}
+
+.cart {
+	margin-right: 10px;
+	width: 26px;
+	height: 26px;
+	fill: var(--color-font);
+}
+
+@media screen and (max-width: 1150px)  {
+	.nav-cart {
+		display: none;
+	}
+	.nav-item {
+		padding: 0 5px;
+	}
 }
 
 /*==========================
@@ -190,6 +239,13 @@ btn-theme
 	cursor: pointer;
 }
 
+
+@media screen and (max-width: 500px)  {
+	.btn-theme {
+		margin-left: 5px;
+	}
+}
+
 /*==========================
 main
 ==========================*/
@@ -238,9 +294,17 @@ footer
 	transition: .5s;
 }
 
-.cart {
-	margin-right: 10px;
-	width: 26px;
-	height: 26px;
-	fill: var(--color-font);
+@media screen and (max-width: 900px)  {
+	.footer {
+		flex-direction: column;
+		justify-content: space-around;
+		text-align: center;
+		height: auto;
+		padding: 10px;
+	}
+
+	.footer a {
+		margin: 0;
+		text-align: center;
+	}
 }
